fixed hover over pageAreas covered by labels

--- a/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/views/viewObject.less
+++ b/goobi-viewer-core/src/main/resources/META-INF/resources/resources/css/less/views/viewObject.less
@@ -81,7 +81,7 @@
     border-style: solid;
     border-width: 2px;  
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
     &.active {
     	cursor: default;
     }
@@ -91,7 +91,8 @@
     &-label {
     	display: none;
 		min-width: 100px;
-		z-index: 2;
+		z-index: 3;
+		pointer-events: none;
     	&-text {
     		display: none;
 	    	background: rgba(51,101,169,1);
@@ -99,7 +100,7 @@
 	    	width: 100%;
 	    	padding: 2px 5px;
 	    	vertical-align: top;
-	    	font-size: 1.6rem;
+	    	font-size: 1.6rem;	    	
     	}
     	&.active,
     	&.hover {
